# arm_robot_moveit

./: .gitignore  README.md
hustac_pg/: CMakeLists.txt  package.xml  urdf.rviz
hustac_pg/config/: hustac_pg_gazebo_joint_position.yaml  joint_names_hustac_pg.yaml
hustac_pg/launch/: display.launch  gazebo.launch  hustac_pg_gazebo_joint_position.launch
hustac_pg/meshes/: base_link.STL  body_link.STL  left_ee_link.STL  left_ee_link2.STL  left_link1.STL  left_link2.STL  left_link3.STL  left_link4.STL  left_link5.STL  left_link6.STL  left_link7.STL  right_ee_link.STL  right_ee_link2.STL  right_link1.STL  right_link2.STL  right_link3.STL  right_link4.STL  right_link5.STL  right_link6.STL  right_link7.STL
hustac_pg/robots/: hustac_pg.urdf
hustac_pg_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hustac_pg_moveit_config/config/: fake_controllers.yaml  hustac_pg.srdf  joint_limits.yaml  ompl_planning.yaml
hustac_pg_moveit_config/launch/: action_client.py  action_server.py  body_pos_listener.py  body_pos_talker.py  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  fibonacci_client.py  gripper_client.py  gripper_server.py  launch_all.launch  move_group.launch  move_group_python_interface_tutorial.py  moveit.rviz  moveit_planning.launch  moveit_rviz.launch  moveit_scene.py  my_move_group_python.py  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
hustac_pg_moveit_config/scripts/: end_effector_pose.py  move_pick.py  moveit_ik_demo.py
hustac_pg_v2/: CMakeLists.txt  README.txt  package.xml  urdf.rviz
hustac_pg_v2/config/: joint_names_hustac_pg_v2.yaml
hustac_pg_v2/launch/: display.launch  gazebo.launch
hustac_pg_v2/meshes/: base_link.STL  gaze_link1.STL  gaze_link2.STL  lb_wheel.STL  left_ee_link.STL  left_ee_link2.STL  left_link1.STL  left_link2.STL  left_link3.STL  left_link4.STL  left_link5.STL  left_link6.STL  left_link7.STL  lf_wheel.STL  rb_wheel.STL  rf_wheel.STL  right_ee_link.STL  right_ee_link2.STL  right_link1.STL  right_link2.STL  right_link3.STL  right_link4.STL  right_link5.STL  right_link6.STL  right_link7.STL  torso_link.STL
hustac_pg_v2/robots/: hustac_pg_v2.urdf  hustac_pg_v2_modify.urdf
hustac_pg_v2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hustac_pg_v2_moveit_config/config/: controllers.yaml  fake_controllers.yaml  hustac_pg_v2.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
hustac_pg_v2_moveit_config/hustac_scenes/: bar1.STL  bar2.STL  des3.STL  desk.STL  hustac_obticle.scene  new_scene_noob.scene  scene1.STL  scene2.STL  scene3.STL  scene3.scene  scene4.STL  scene4.scene
hustac_pg_v2_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake.launch  fake_moveit_controller_manager.launch.xml  hustac_pg_v2_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
hustac_pg_v2_moveit_config/scripts/: go_to_pose_goal.py  go_to_pose_goal_gpd.py  gripper.py  move_group.py  move_pick.py  pick_and_place.py  pick_and_place_fake.py  pick_and_place_listen_pose.py  pick_and_place_listen_pose_gpd.py  pick_and_place_raw.py
hustacpg_v2_application/: CMakeLists.txt  package.xml
hustacpg_v2_application/launch/: calib_result_show.launch  calibrate.launch  calibration.rviz  calibration_auto_move.py  eye_on_hand_calibration.launch  hand2eye_calibration.launch  my_easy_handeye.rviz  publish.launch  publish_tf.launch  rviz_easy_handeye.config
hustacpg_v2_application/scripts/: move_group_tutorial.py  tf_broadcaster.py  tf_listener.py
pickup/: CMakeLists.txt  package.xml
pickup/launch/: calib_result_show.launch  calib_result_show.rviz  get_grasp_pose.rviz  get_object_pose.launch  get_object_pose_raw.launch  kinect_get_grasp_pose.launch  kinect_get_grasp_pose.rviz  obj_pose.rviz  obj_pose_show.rviz  ork_kinect.launch  ork_kinect.rviz  robot_get_grasp_pose.launch  robot_kinect_ork.rviz  robot_ork_kinect.launch  robot_ork_kinect.rviz  robot_ork_kinect_fake.launch
pickup/msg/: PickupObj.msg
pickup/scripts/: image_converter.py  obj_tf_broadcaster.py  obj_tf_listener.py  pylistener.py  tensorflow_test.py
pickup/src/: get_obj_depth_cpu.cpp  get_obj_depth_gpu.cpp  kinect2_pcl.cpp  multi_thread_listener.cpp  single_thread_listener.cpp
pickup/yolov3/: nms_demo.py  obj_recogniz_yolo.py  object_seg.py  video_demo.py
pickup/yolov3/core/: utils.py
pickup/yolov3/docs/: requirements.txt
pickup_msg/: CMakeLists.txt  package.xml
